common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wine-app
  labels:
    app: wine-app
