common/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wine-app-ingress
  namespace: wine-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: wine-app-frontend-service-clusterip
            port:
              number: 80
      - pathType: Prefix
        path: /api/v1
        backend:
          service:
            name: wine-app-backend-service-clusterip
            port:
              number: 4000
